--- a/resume.html
+++ b/resume.html
@@ -8,6 +8,26 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        /* Dropdown menu color customization */
+        .accordion-button:not(.collapsed) {
+            background-color: #2c2c2c;
+            color: white;
+        }
+
+        .accordion-button {
+            background-color: #2c2c2c;
+            color: rgb(101, 98, 98);
+        }
+        /* Override Bootstrap active heading color */
+        .accordion-button:focus {
+            box-shadow: none; /* Remove the focus outline */
+        }
+
+        .accordion-button:not(.collapsed):after {
+            content: none; /* Remove the collapsed state indicator */
+        }
+    </style>
 </head>
 <body>
     <header class="header">
@@ -51,8 +71,8 @@
                 background-color: #168185;
             }
         </style>-->
-        <div class="container" style="color:whitesmoke">
-            <div class="container" style="color:whitesmoke">
+        <div class="container" style="color:#8df7c4">
+            <div class="container" style="color:#8df7c4">
                 <div class="row">
                     <div class="col-md-8 offset-md-2 ">
                         <br><br>
@@ -62,7 +82,7 @@
                         <div class="accordion" id="accordionExample">
                             <div class="accordion-item">
                                 <h3 class="accordion-header" id="headingOne">
-                                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEducation" aria-expanded="false" aria-controls="collapseEducation">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEducation" aria-expanded="false" aria-controls="collapseEducation tyle="color:#8df7c4">
                                         Education
                                     </button>
                                 </h3>
