--- a/resume.html
+++ b/resume.html
@@ -19,13 +19,12 @@
             background-color: #2c2c2c;
             color: rgb(101, 98, 98);
         }
-        /* Override Bootstrap active heading color */
         .accordion-button:focus {
-            box-shadow: none; /* Remove the focus outline */
+            box-shadow: none;
         }
 
         .accordion-button:not(.collapsed):after {
-            content: none; /* Remove the collapsed state indicator */
+            content: none;
         }
         .accordion-body{
             background-color: #1e1d1d;
@@ -136,9 +135,9 @@
                                         <ul>
                                             <li><strong>Programming Languages:</strong> C#, Java, Python, JavaScript</li>
                                             <li><strong>Web Development:</strong> ASP.Net(Core,MVC,Framework), React, HTML, CSS</li>
-                                            <li><strong>Database Management:</strong> MySQL, SQL , MongoDB</li>
+                                            <li><strong>Design and Graphics:</strong> Adobe Photoshop, Adobe PremierePro</li>
                                             <li><strong>Version Control: </strong>Git</li>
-                                            <!--<li><strong>Design and Graphics:</strong> Adobe Photoshop, Adobe PremierePro</li>-->
+                                            <li><strong>Database Management:</strong> MySQL, SQL , MongoDB</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -213,12 +212,11 @@
                                     <div class="accordion-body">
                                         <!-- Certification content goes here -->
                                         <ul>
-                                            <li><strong>College Football Team:</strong> Served as the captain of the college football team, leading the team to victory in multiple intramural competitions.</li>
-                                            <li><strong>Photography Club:</strong> Founded and led the college photography club, organizing workshops and exhibitions to promote photography as an art form.</li>
-                                            <li><strong>Trekking Club:</strong> Actively participated in challenging trekking expeditions, fostering leadership and teamwork skills while exploring remote and scenic locations.</li>
-                                            <li><strong>Community Volunteer:</strong> Volunteered at a local non-profit organization, assisting in community events, fundraisers, and charity drives.</li>
-                                            <li><strong>Sports Tournaments:</strong> Organized and participated in various sports tournaments, promoting physical fitness and teamwork.</li>
-                                            <li><strong>Environmental Conservation:</strong> Participated in environmental conservation initiatives, including tree planting drives and beach clean-up events, contributing to a greener environment.</li>
+                                            <li><strong>College Football Captain:</strong> Led the college football team to victory in multiple intramural competitions as the team captain.</li>
+                                            <li><strong>Photography Club Founder:</strong> Established and led the college photography club, organizing workshops and exhibitions to promote photography as an art form.</li>
+                                            <li><strong>Trekking Enthusiast:</strong> Actively participated in challenging trekking expeditions, fostering leadership and teamwork skills while exploring remote and scenic locations.</li>
+                                            <li><strong>Community Volunteer:</strong> Dedicated volunteer at a local non-profit organization, assisting in community events, fundraisers, and charity drives.</li>
+                                            <li><strong>Sports Tournament Organizer:</strong> Successfully organized and participated in various sports tournaments, promoting physical fitness and teamwork.</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -234,6 +232,27 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            // Get all accordion items
+            const accordionItems = document.querySelectorAll('.accordion-item');
+    
+            // Attach event listener to each item
+            accordionItems.forEach(function (item) {
+                item.addEventListener('show.bs.collapse', function () {
+                    // Close all other accordion items when one is shown
+                    accordionItems.forEach(function (otherItem) {
+                        if (otherItem !== item) {
+                            const collapse = new bootstrap.Collapse(otherItem.querySelector('.collapse'), {
+                                toggle: false
+                            });
+                            collapse.hide();
+                        }
+                    });
+                });
+            });
+        });
+    </script>
 </body>
 </html>
 
