--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <div class="btn-container">
                     <div class="btn-box">
                         <a href="blog.html" target="_blank">Blog</a>
-                        <a href="resume.html" download>Resume</a>
+                        <a href="resume.html" >Resume</a>
                     </div>
                     </div>
 
